# Health_Agent

./: README.md  docker-compose.yml  preprocess.ipynb  pyproject.toml
UI/: Dockerfile  Dockerfile.streamlit  streamlit.py
src/health/: Dockerfile  HealthFlow.py  Qmanager.py  file.py  main.py  my_langchain.py  requirements.txt  streamlit.py
src/health/crews/sql_crew/: crew.py
src/health/crews/sql_crew/config/: agents.yaml  tasks.yaml
